## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = -I$(top_srcdir) -I$(includedir) 

bin_PROGRAMS = emusc

emusc_SOURCES =			\
	emusc.cc		\
	audio_output.cc		\
	audio_output_alsa.cc	\
	audio_output_core.cc	\
	audio_output_null.cc	\
	audio_output_pulse.cc	\
	audio_output_win32.cc	\
	biquad_filter.cc	\
	ex.cc			\
	config.cc		\
	control_rom.cc		\
	midi_input.cc		\
	midi_input_alsa.cc	\
	midi_input_core.cc	\
	midi_input_keyboard.cc	\
	midi_input_win32.cc	\
	note.cc			\
	note_partial.cc		\
	part.cc			\
	pcm_rom.cc		\
	riaa_filter.cc		\
	synth.cc		\
	volume_envelope.cc
